--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "ts-node-dev --poll --respawn --transpile-only --files ./src/index.ts",
     "build": "tsc -p .",
-    "start": "NODE_ENV=production node dist/src/index.js"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@notionhq/client": "^1.0.2",
@@ -13,7 +13,7 @@
     "dotenv": "^16.0.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.21",
+    "@types/node": "^18.0.0",
     "prettier": "^2.5.1",
     "ts-node": "^10.6.0",
     "ts-node-dev": "^1.1.8",
