--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,12 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "./dist",
-    "rootDir": ".",
+    "rootDir": "./src",
     "baseUrl": ".",
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
   "exclude": ["node_modules"],
-  "include": ["src", "*/**/*.json"]
+  "include": ["src/**/*", "*/**/*.json"]
 }
